ui fixes and content changed

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -485,6 +485,9 @@ Version: 1.0
     .signin-modal.form-section {
         width: 100%!important;
     }
+    .banner-sec{
+        padding: 25px 0 80px!important;
+    }
 }
 
 
