--- a/src/components/LandingPageIndex/LandingPage.css
+++ b/src/components/LandingPageIndex/LandingPage.css
@@ -11,8 +11,8 @@
     background-image: -ms-linear-gradient(30deg, #40b0a8 0%, #40b0a8 100%);
     background-image: linear-gradient(30deg, #40b0a8 0%, #40b0a8 100%);
     background-size: cover;
-    padding: 120px 0 80px;
-    height: 615px;
+    padding: 90px 0 80px;
+    height: 630px;
     z-index: 1;
 }
 
@@ -40,8 +40,13 @@
     opacity: 0.6;
 }
 
-.banner-content-sec {
+/* .banner-content-sec {
     margin-top: 90px;
+} */
+
+.landing-logo{
+    max-width: 20em;
+    margin-bottom: 90px;
 }
 
 .banner-content-sec .title{
