ui changes done

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1850,6 +1850,20 @@ button.custom-btn {
   bottom:0;
   width: 100%;
   text-align: center;
+  z-index: 2;
+}
+
+.post-image::before{
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  border-radius: 5px;
 }
 
 .post-image{
