style.css edited online with Bitbucket

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1858,7 +1858,7 @@ button.custom-btn {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  /** background-color: rgba(0, 0, 0, 0.4); */
   position: absolute;
   width: 100%;
   z-index: 1;
