--- a/src/components/Accounts/Payments/BankingIndex.css
+++ b/src/components/Accounts/Payments/BankingIndex.css
@@ -26,7 +26,7 @@
     font-size: 13px;
     font-weight: 500;
     text-transform: uppercase;
-    color: #8a96a3;
+    color: var(--quaternary-color);
     padding: 0 6px;
     margin: 0;
 }
@@ -42,7 +42,7 @@
     font-weight: 500;
     vertical-align: middle;
     text-transform: uppercase;
-    color: #8a96a3;
+    color: var(--quaternary-color);
 }
 
 .banking-sec .banking-body h4{
@@ -75,7 +75,7 @@
 .banking-sec .banking-body .banking-personal-form .btn-upload {
     padding: 9px 16px;
     font-weight: 500;
-    color: #00aff0;
+    color: var(--primary-color);
     border: 1px solid #e2ecf8;
     font-size: 14px;
     background: transparent;
