--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -383,9 +383,10 @@ Version: 1.0
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        overflow: hidden;
+        overflow:auto;
         text-overflow: ellipsis;
         white-space: nowrap;
+        width: 100%;
     }
     .msg-header{
         min-height: auto;
@@ -471,6 +472,15 @@ Version: 1.0
     }
     .bookmark-sec .vertical-menu {
         display:flex;
+    }
+    .profile-links{
+        display: flex;
+        flex-wrap: nowrap;
+        white-space: nowrap;
+        overflow: auto;
+    }
+    .profile--user{
+        margin-bottom: 10px;
     }
 
 }
