--- a/src/components/Accounts/Payments/PaymentsIndex.css
+++ b/src/components/Accounts/Payments/PaymentsIndex.css
@@ -192,6 +192,7 @@
     font-size: 1.2em;
     font-weight: 400;
     vertical-align: middle;
+    white-space: nowrap;
 }
 
 .payment-tabs-card .payment-tabs-content th {
@@ -199,6 +200,7 @@
     font-weight: 600;
     color: var(--quaternary-color);
     border-bottom: 1px solid var(--primary-color);
+    white-space: nowrap;
 }
 
 .payment-tabs-card .nav-tabs{
@@ -249,4 +251,23 @@
 .payment-sec .send-withdraw-btn:active{
     background: var(--primary-color)!important;
     color: var(--secondary-color)!important;
+}
+
+.payment-sec ::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.payment-sec ::-webkit-scrollbar
+{
+	width: 5px;
+    height: 5px;
+	background-color: #F5F5F5;
+}
+
+.payment-sec ::-webkit-scrollbar-thumb
+{
+	background-color: var(--primary-color);
+	border: 2px solid var(--primary-color);
 }
