--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -49,6 +49,9 @@ Version: 1.0
     .search-dropdown-sec {
         right: 50px!important;
     }
+    .resp-col-reverse{
+        flex-direction: column-reverse;
+    }
 }
 
 @media (max-width: 991.98px) {
@@ -136,6 +139,9 @@ Version: 1.0
     }
     .gallery.js-gallery .react-player__preview {
         min-height: 50vh;
+    }
+    .resp-col-reverse{
+        flex-direction: column-reverse;
     }
 }
 
@@ -330,7 +336,7 @@ Version: 1.0
         justify-content: center;
     } */
     .no-data-found-sec .no-data-found-img-sec img{
-        max-width: 100%;
+        max-width: 90%;
     }
     .search-dropdown-sec {
         right: 55px!important;
@@ -482,7 +488,9 @@ Version: 1.0
     .profile--user{
         margin-bottom: 10px;
     }
-
+    .resp-col-reverse{
+        flex-direction: column-reverse;
+    }
 }
 
 
