--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8638,3 +8638,19 @@ button {
   font-size: 100%!important;
 }
 
+.gallery-img-sec{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.gallery-play-icon{
+  border-style: solid;
+  border-width: 16px 0px 16px 26px;
+  border-color: transparent transparent transparent white;
+  position:absolute;
+  top:50%;
+}
+
