--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -474,7 +474,7 @@ Version: 1.0
         padding-bottom: 18px;
     }
     .gallery.js-gallery .react-player__preview {
-        min-height: 50vh;
+        min-height: 18em;
     }
     .bookmark-sec .vertical-menu {
         display:flex;
@@ -493,6 +493,14 @@ Version: 1.0
     }
     .gallery-play-icon{
         top:40%;
+    }
+    .react-player__preview{
+        background-size: contain!important;
+        background-repeat: no-repeat;
+    }
+    .post-content .post-image .post-view-image{
+        height:18em;
+        object-fit: cover;
     }
 }
 
